# ps1.py

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README.rst  ps1.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
src/jwodder_ps1/: __init__.py  __main__.py  git.py  info.py  style.py  styles.py  util.py
test/: test_git.py  test_info.py  test_util.py
