[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jwodder-ps1"
dynamic = ["version"]
description = "Yet another bash/zsh custom prompt script"
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "ps1@varonathe.org" }
]

keywords = [
    "bash",
    "git",
    "prompt",
    "ps1",
    "zsh",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Shells",
    "Typing :: Typed",
]

dependencies = []

[project.scripts]
jwodder-ps1 = "jwodder_ps1.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/ps1.py"
"Bug Tracker" = "https://github.com/jwodder/ps1.py/issues"

[tool.hatch.version]
path = "src/jwodder_ps1/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
